# UserPortrait

./: 1.txt  README.md  evaluate_profiles.py  generate_sample_events.py  pyproject.toml  user_portrait_report.md
portrait_output/: activity_levels.csv  evaluation_metrics.json  frequent_tasks.csv  periodic_tasks.csv  personal_behavior_sequences.csv  recent_high_freq_tasks.csv  recent_tasks.csv  run_manifest.json  time_period_tasks.csv
portrait_output_large/: evaluation_metrics.json  periodic_tasks.csv  personal_behavior_sequences.csv  recent_high_freq_tasks.csv  run_manifest.json  time_period_tasks.csv
portrait_output_large_dirty/: activity_levels.csv  frequent_tasks.csv  personal_behavior_sequences.csv  recent_tasks.csv  run_manifest.json
sample_data/: sample_events.csv  sample_ground_truth_frequent.csv  sample_ground_truth_high_freq.csv  sample_ground_truth_high_freq_negative.csv  sample_ground_truth_periodic.csv  sample_ground_truth_periodic_negative.csv  sample_ground_truth_recent.csv  sample_ground_truth_sequences.csv  sample_ground_truth_time_period.csv  sample_ground_truth_time_period_negative.csv
sample_data_large/: sample_dataset_manifest.json  sample_ground_truth_frequent.csv  sample_ground_truth_high_freq.csv  sample_ground_truth_high_freq_negative.csv  sample_ground_truth_periodic.csv  sample_ground_truth_periodic_negative.csv  sample_ground_truth_recent.csv  sample_ground_truth_sequences.csv  sample_ground_truth_sequences_negative.csv  sample_ground_truth_time_period_negative.csv  sample_injected_time_period_patterns.csv
tests/: test_cli.py  (+6 more)
(+9 files in other folders)
