[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-app-user-portrait"
version = "0.1.0"
description = "Rule-based bank app user behavior portrait builder"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0,<3.0"]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0"]

[tool.setuptools.packages.find]
include = ["user_portrait*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
